# spc_r

./: .gitignore  README.md  add_correction_to_file.py  add_judgement_to_file.py  batch_utils.py  correct_transcriptions.py  create_finetune_dataset.py  pyproject.toml  retrieve_correction_results.py  retrieve_judgement_results.py  submit_correction_job.py  submit_judgement_job.py  utils.py
